--- a/app/src/main/res/layout/fragment_study_new_list.xml
+++ b/app/src/main/res/layout/fragment_study_new_list.xml
@@ -6,9 +6,23 @@
     tools:context=".StudyNewListFragment">
 
     <!-- TODO: Update blank fragment layout -->
-    <TextView
+    <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:text="@string/hello_blank_fragment" />
+        android:background="#222"
+        tools:ignore="UselessParent">
+
+        <LinearLayout
+            android:id="@+id/newsList"
+            android:orientation="vertical"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:background="@drawable/rounded_bg"
+            android:layout_marginHorizontal="30dp"
+            android:layout_marginVertical="20dp">
+
+        </LinearLayout>
+
+    </LinearLayout>
 
 </FrameLayout>
