--- a/app/src/main/res/layout/fragment_study_summary.xml
+++ b/app/src/main/res/layout/fragment_study_summary.xml
@@ -18,6 +18,7 @@
             android:orientation="vertical"
             android:background="#28292D">
             <TextView
+                android:id="@+id/toDate"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:text="날짜"
