--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -1,14 +1,54 @@
-<?xml version="1.0" encoding="utf-8"?>
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+  xmlns:app="http://schemas.android.com/apk/res-auto"
+  xmlns:tools="http://schemas.android.com/tools"
+  android:layout_width="match_parent"
+  android:layout_height="match_parent"
+  android:background="#1E1F23"
+  android:orientation="vertical"
+  tools:context=".HomeFragment">
+
+  <androidx.cardview.widget.CardView
+    android:id="@+id/Record"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    tools:context=".HomeFragment">
+    android:layout_height="184dp"
+    android:layout_marginBottom="20dp"
+    app:cardBackgroundColor="#28292D" >
 
-    <!-- TODO: Update blank fragment layout -->
     <TextView
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:text="home page" />
+      android:id="@+id/RexTxt"
+      android:layout_width="match_parent"
+      android:layout_height="wrap_content"
+      android:fontFamily="@font/sansationregular"
+      android:text="Record"
+      android:layout_marginTop="35dp"
+      android:textAlignment="center"
+      android:textColor="#FFFFFF"
+      android:textSize="34sp" />
 
-</FrameLayout>
+    <View
+      android:id="@+id/view"
+      android:layout_width="wrap_content"
+      android:layout_height="wrap_content" />
+  </androidx.cardview.widget.CardView>
+
+  <androidx.cardview.widget.CardView
+    android:id="@+id/NewNews"
+    android:layout_width="match_parent"
+    android:layout_height="323dp"
+    app:cardBackgroundColor="#28292D"
+    app:cardElevation="2dp">
+
+    <TextView
+      android:id="@+id/NewTxt"
+      android:layout_width="match_parent"
+      android:layout_height="50dp"
+      android:layout_marginTop="40dp"
+      android:ems="10"
+      android:fontFamily="@font/sansationregular"
+      android:inputType="text"
+      android:text="Recommand News"
+      android:textAlignment="center"
+      android:textColor="#ffffff"
+      android:textSize="34sp" />
+  </androidx.cardview.widget.CardView>
+</LinearLayout>
