--- a/app/src/main/res/layout/fragment_study_new_detail.xml
+++ b/app/src/main/res/layout/fragment_study_new_detail.xml
@@ -1,14 +1,19 @@
 <?xml version="1.0" encoding="utf-8"?>
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    tools:context=".StudyNewDetailFragment">
+xmlns:tools="http://schemas.android.com/tools"
+android:layout_width="match_parent"
+android:layout_height="match_parent"
+tools:context=".StudyNewDetailFragment">
 
-    <!-- TODO: Update blank fragment layout -->
-    <TextView
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:text="@string/hello_blank_fragment" />
+<!-- TODO: Update blank fragment layout -->
+<TextView
+  android:layout_width="match_parent"
+  android:layout_height="match_parent"
+  android:background="#1E1F23"
+  android:text="home page" />
+
+<WebView
+  android:layout_width="match_parent"
+  android:layout_height="511dp" />
 
 </FrameLayout>
