--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -29,6 +29,47 @@
       android:id="@+id/view"
       android:layout_width="wrap_content"
       android:layout_height="wrap_content" />
+
+    <ImageView
+      android:id="@+id/Total"
+      android:layout_width="135dp"
+      android:layout_height="61dp"
+      android:layout_marginLeft="45dp"
+      android:layout_marginTop="100dp"
+      android:src="@drawable/rounded_bg" />
+
+    <TextView
+      android:id="@+id/textView3"
+      android:layout_width="wrap_content"
+      android:layout_height="wrap_content"
+      android:layout_marginLeft="60dp"
+      android:layout_marginTop="120dp"
+      android:fontFamily="@font/sansationregular"
+      android:text="Total"
+      android:textAlignment="center"
+      android:textColor="#Ffffff"
+      android:textSize="16sp" />
+
+    <ImageView
+      android:id="@+id/Todo"
+      android:layout_width="206dp"
+      android:layout_height="61dp"
+      android:layout_marginLeft="201dp"
+      android:layout_marginTop="100dp"
+      android:src="@drawable/rounded_bg" />
+
+    <TextView
+      android:id="@+id/textView2"
+      android:layout_width="77dp"
+      android:layout_height="wrap_content"
+      android:layout_marginLeft="225dp"
+      android:layout_marginTop="112dp"
+      android:fontFamily="@font/sansationregular"
+      android:text=" Today's Progress"
+      android:textAlignment="center"
+      android:textColor="#Ffffff"
+      android:textSize="16sp" />
+
   </androidx.cardview.widget.CardView>
 
   <androidx.cardview.widget.CardView
@@ -37,6 +78,15 @@
     android:layout_height="323dp"
     app:cardBackgroundColor="#28292D"
     app:cardElevation="2dp">
+
+    <ImageView
+      android:id="@+id/NewNewsSq"
+      android:layout_width="357dp"
+      android:layout_height="190dp"
+
+      android:layout_marginLeft="44dp"
+      android:layout_marginTop="110dp"
+      android:src="@drawable/rounded_bg" />
 
     <TextView
       android:id="@+id/NewTxt"
@@ -50,5 +100,17 @@
       android:textAlignment="center"
       android:textColor="#ffffff"
       android:textSize="34sp" />
+
+    <Button
+      android:id="@+id/NewNewsBtn"
+      android:layout_width="245dp"
+      android:layout_height="wrap_content"
+      android:layout_marginLeft="100dp"
+      android:layout_marginTop="235dp"
+      android:background="#9E26F3"
+      android:fontFamily="@font/sansationregular"
+      android:text="News Detail"
+      android:textSize="24sp" />
+
   </androidx.cardview.widget.CardView>
 </LinearLayout>
