--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -3,6 +3,7 @@
     <style name="Base.Theme.DEB" parent="Theme.Material3.DayNight.NoActionBar">
         <!-- Customize your light theme here. -->
         <!-- <item name="colorPrimary">@color/my_light_primary</item> -->
+        <!--<item name="android:windowBackground">@drawable/splash_start_background</item>-->
     </style>
 
     <style name="Theme.DEB" parent="Base.Theme.DEB" />
