--- a/app/src/main/res/layout/fragment_study_new_list.xml
+++ b/app/src/main/res/layout/fragment_study_new_list.xml
@@ -1,28 +1,39 @@
 <?xml version="1.0" encoding="utf-8"?>
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
+  xmlns:tools="http://schemas.android.com/tools"
+  android:layout_width="match_parent"
+  android:layout_height="match_parent"
+  tools:context=".StudyNewListFragment">
+
+  <LinearLayout
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".StudyNewListFragment">
+    android:background="#222"
+    android:orientation="vertical"
+    android:clipChildren="true"
+    tools:ignore="UselessParent">
 
-    <!-- TODO: Update blank fragment layout -->
     <LinearLayout
+      android:id="@+id/newsList"
+      android:orientation="vertical"
+      android:layout_width="match_parent"
+      android:layout_height="match_parent"
+      android:background="@drawable/rounded_bg"
+      android:layout_marginHorizontal="30dp"
+      android:layout_marginVertical="20dp"
+      android:clipChildren="true">
+
+      <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/recyclerView"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:background="#222"
-        tools:ignore="UselessParent">
-
-        <LinearLayout
-            android:id="@+id/newsList"
-            android:orientation="vertical"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:background="@drawable/rounded_bg"
-            android:layout_marginHorizontal="30dp"
-            android:layout_marginVertical="20dp">
-
-        </LinearLayout>
+        android:clipToPadding="true"
+        android:padding="16dp"
+        android:layout_marginBottom="16dp"
+        android:scrollbars="vertical" />
 
     </LinearLayout>
+
+  </LinearLayout>
 
 </FrameLayout>
