--- a/app/src/main/res/layout/fragment_study_new_detail.xml
+++ b/app/src/main/res/layout/fragment_study_new_detail.xml
@@ -5,8 +5,26 @@
   android:layout_height="match_parent"
   tools:context=".StudyNewDetailFragment">
 
-  <WebView
-    android:id="@+id/webView"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent" />
+    <WebView
+          android:id="@+id/webView"
+          android:layout_width="match_parent"
+          android:layout_height="match_parent"
+        />
+
+    <Button
+        android:id="@+id/startStudyButton"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_gravity="bottom"
+        android:layout_margin="16dp"
+        android:padding="12dp"
+        android:text="Start Study"
+        android:textAllCaps="false"
+        android:textSize="16sp"
+        android:backgroundTint="#9E26F3"
+        android:textColor="@android:color/white" />
+
+
+
+
 </FrameLayout>
