--- a/app/src/main/res/layout/fragment_history.xml
+++ b/app/src/main/res/layout/fragment_history.xml
@@ -22,6 +22,7 @@
             tools:ignore="Suspicious0dp"
             android:gravity="center">
             <TextView
+                android:fontFamily="@font/sansationregular"
                 android:id="@+id/textView"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
