--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -7,12 +7,15 @@
   android:orientation="vertical"
   tools:context=".HomeFragment">
 
-  <androidx.cardview.widget.CardView
+  <LinearLayout
     android:id="@+id/Record"
     android:layout_width="match_parent"
-    android:layout_height="184dp"
+    android:layout_height="0dp"
+    android:background="#28292D"
     android:layout_marginBottom="20dp"
-    app:cardBackgroundColor="#28292D" >
+    android:layout_weight="1"
+    android:gravity="center_vertical"
+    android:orientation="vertical">
 
     <TextView
       android:id="@+id/RexTxt"
@@ -20,70 +23,79 @@
       android:layout_height="wrap_content"
       android:fontFamily="@font/sansationregular"
       android:text="Record"
-      android:layout_marginTop="35dp"
+      android:layout_marginTop="20dp"
       android:textAlignment="center"
       android:textColor="#FFFFFF"
-      android:textSize="34sp" />
-
-    <View
-      android:id="@+id/view"
-      android:layout_width="wrap_content"
-      android:layout_height="wrap_content" />
-
-    <ImageView
-      android:id="@+id/Total"
-      android:layout_width="135dp"
-      android:layout_height="61dp"
-      android:layout_marginLeft="45dp"
-      android:layout_marginTop="100dp"
-      android:src="@drawable/rounded_bg" />
-
-    <TextView
-      android:id="@+id/textView3"
-      android:layout_width="wrap_content"
-      android:layout_height="wrap_content"
-      android:layout_marginLeft="60dp"
-      android:layout_marginTop="120dp"
-      android:fontFamily="@font/sansationregular"
-      android:text="Total"
-      android:textAlignment="center"
-      android:textColor="#Ffffff"
-      android:textSize="16sp" />
-
-    <ImageView
-      android:id="@+id/Todo"
-      android:layout_width="206dp"
-      android:layout_height="61dp"
-      android:layout_marginLeft="201dp"
-      android:layout_marginTop="100dp"
-      android:src="@drawable/rounded_bg" />
-
-    <TextView
-      android:id="@+id/textView2"
-      android:layout_width="77dp"
-      android:layout_height="wrap_content"
-      android:layout_marginLeft="225dp"
-      android:layout_marginTop="112dp"
-      android:fontFamily="@font/sansationregular"
-      android:text=" Today's Progress"
-      android:textAlignment="center"
-      android:textColor="#Ffffff"
-      android:textSize="16sp" />
-
-  </androidx.cardview.widget.CardView>
-
-  <androidx.cardview.widget.CardView
-    android:id="@+id/NewNews"
-    android:layout_width="match_parent"
-    android:layout_height="wrap_content"
-    app:cardBackgroundColor="#28292D"
-    app:cardElevation="2dp"
-    android:padding="16dp">
+      android:textSize="30sp" />
 
     <LinearLayout
+      android:id="@+id/Total"
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
-      android:orientation="vertical">
+      android:layout_marginVertical="18dp"
+      android:layout_marginHorizontal="30dp">
+      <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_weight="1.2"
+        android:background="@drawable/rounded_bg"
+        android:layout_marginRight="20dp"
+        android:gravity="center">
+        <TextView
+          android:id="@+id/textView3"
+          android:layout_width="wrap_content"
+          android:layout_height="wrap_content"
+          android:fontFamily="@font/sansationregular"
+          android:text="Total"
+          android:textAlignment="center"
+          android:textColor="#Ffffff"
+          android:textSize="16sp" />
+        <TextView
+          android:id="@+id/TotalNum"
+          android:layout_width="wrap_content"
+          android:layout_height="wrap_content"
+          android:text="8"
+          android:fontFamily="@font/sansationregular"
+          android:textColor="#9E26F3"
+          android:textSize="32sp"
+          android:layout_margin="10dp"/>
+      </LinearLayout>
+      <LinearLayout
+          android:layout_width="match_parent"
+          android:layout_height="match_parent"
+          android:layout_weight="1"
+          android:background="@drawable/rounded_bg"
+          android:gravity="center">
+        <TextView
+          android:id="@+id/textView2"
+          android:layout_width="77dp"
+          android:layout_height="wrap_content"
+          android:fontFamily="@font/sansationregular"
+          android:text=" Today's Progress"
+          android:textAlignment="center"
+          android:textColor="#Ffffff"
+          android:textSize="16sp" />
+        <TextView
+          android:id="@+id/TodoProgress"
+          android:layout_width="wrap_content"
+          android:layout_height="wrap_content"
+          android:text="Not done"
+          android:fontFamily="@font/sansationregular"
+          android:textColor="#9E26F3"
+          android:textSize="20sp"
+          android:layout_margin="10dp"/>
+      </LinearLayout>
+    </LinearLayout>
+  </LinearLayout>
+
+  <LinearLayout
+    android:id="@+id/NewNews"
+    android:layout_width="match_parent"
+    android:layout_height="0dp"
+    android:orientation="vertical"
+    android:background="#28292D"
+    android:layout_weight="2"
+    android:padding="16dp">
 
       <!-- 제목 -->
       <TextView
@@ -94,7 +106,7 @@
         android:text="Recommand News"
         android:textAlignment="center"
         android:textColor="#ffffff"
-        android:textSize="34sp"
+        android:textSize="30sp"
         android:layout_marginBottom="16dp" />
 
       <!-- 뉴스 내용 -->
@@ -104,7 +116,12 @@
         android:orientation="vertical"
         android:background="@drawable/rounded_bg"
         android:padding="12dp">
-
+        <LinearLayout
+          android:id="@+id/RecommandNews"
+          android:layout_width="match_parent"
+          android:layout_height="wrap_content"
+          android:orientation="vertical"
+          android:layout_marginHorizontal="10dp">
         <TextView
           android:id="@+id/latestNewsTitle"
           android:layout_width="match_parent"
@@ -115,7 +132,6 @@
           android:textStyle="bold"
           android:textAlignment="center"
           android:fontFamily="@font/sansationregular" />
-
         <TextView
           android:id="@+id/latestNewsDescription"
           android:layout_width="match_parent"
@@ -136,10 +152,11 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginTop="20dp"
-        android:background="#9E26F3"
+        android:background="@drawable/rounded_button"
         android:fontFamily="@font/sansationregular"
         android:text="News Detail"
-        android:textSize="24sp" />
+        android:textSize="20sp"
+        android:layout_marginHorizontal="25dp"/>
+      </LinearLayout>
     </LinearLayout>
-  </androidx.cardview.widget.CardView>
 </LinearLayout>
