--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -107,7 +107,8 @@
         android:textAlignment="center"
         android:textColor="#ffffff"
         android:textSize="30sp"
-        android:layout_marginBottom="16dp" />
+        android:layout_marginTop="9dp"
+        android:layout_marginBottom="25dp"/>
 
       <!-- 뉴스 내용 -->
       <LinearLayout
@@ -151,7 +152,7 @@
         android:id="@+id/NewNewsBtn"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="20dp"
+        android:layout_marginVertical="10dp"
         android:background="@drawable/rounded_button"
         android:fontFamily="@font/sansationregular"
         android:text="News Detail"
