--- a/app/src/main/res/layout/fragment_history.xml
+++ b/app/src/main/res/layout/fragment_history.xml
@@ -1,47 +1,23 @@
 <?xml version="1.0" encoding="utf-8"?>
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    tools:context=".HistoryFragment">
+    android:layout_width="match_parent" android:layout_height="match_parent"
+    android:background="#1E1F23">
 
-    <!-- TODO: Update blank fragment layout -->
-    <LinearLayout
+    <TextView
+        android:id="@+id/historyTitle"
+        android:layout_width="match_parent"
+        android:layout_height="56dp"
+        android:gravity="center"
+        android:text="History"
+        android:textColor="#FFF"
+        android:textSize="24sp"
+        android:background="#28292D"/>
+
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/historyRecyclerView"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:background="#222"
-        android:orientation="vertical"
-        tools:ignore="UselessParent">
-
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="0dp"
-            android:background="#28292D"
-            android:layout_weight="1"
-            android:layout_marginBottom="30dp"
-            tools:ignore="Suspicious0dp"
-            android:gravity="center">
-            <TextView
-                android:fontFamily="@font/sansationregular"
-                android:id="@+id/textView"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="History"
-                android:textColor="#FFFFFF"
-                android:textSize="30sp"
-                tools:ignore="HardcodedText" />
-        </LinearLayout>
-
-        <LinearLayout
-            android:orientation="vertical"
-            android:id="@+id/historyList"
-            android:layout_width="match_parent"
-            android:layout_height="0dp"
-            android:layout_weight="5"
-            android:background="#28292D"
-            tools:ignore="Suspicious0dp">
-        </LinearLayout>
-
-    </LinearLayout>
-
+        android:layout_marginTop="56dp"
+        android:padding="8dp"
+        android:clipToPadding="false"/>
 </FrameLayout>
